@@ -1,4 +1,5 @@
 0.7.2
+Added check for messages time interval ( ms ) to prefs ( default 1000ms ).
 Added 'Delete' to edit/context menu.
 CTRL+D now deletes word under cursor if no selection or deletes selected text.
 Added 'Select All' to edit/context menu.
